The text entered in the field is displayed in h1.

--- a/final_project_plus/src/style.css
+++ b/final_project_plus/src/style.css
@@ -74,13 +74,14 @@ input[type="text"] {
   padding-right: 50px;
   padding-top: 30px;
   padding-bottom: 50px;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 .local-parameters:hover,
 .local-temperature:hover,
 .week-weather .col-2:hover {
   opacity: 1;
 }
+
 
 .local-temperature {
   border-radius: 10px;
@@ -108,14 +109,22 @@ input[type="text"] {
   font-size: 8px;
   font-weight: lighter;
 }
+.current-time{
+  color:red;
+}
+
+
 .converter-link{
   text-decoration: none;
   color: rgb(0, 0, 0);
-  opacity: 0.5;
+  opacity: 0.8;
 }
 .converter-link:hover{
   opacity:1;
+    font-weight: bold;
+
 }
+
 .week-weather {
   position: absolute;
   bottom: 20px;
@@ -144,9 +153,12 @@ input[type="text"] {
   border: 1px solid rgba(26, 41, 1, 0.514);
   opacity: 1;
 }
-.main-stiker-icon {
+#main-stiker-icon {
   text-align: right;
+  opacity: 1;
 }
 
 .week-stiker-icon {
 }
+
+
