Edited: #description only first letter will be uppercase

--- a/final_project_plus/src/style.css
+++ b/final_project_plus/src/style.css
@@ -82,7 +82,6 @@ input[type="text"] {
   opacity: 1;
 }
 
-
 .local-temperature {
   border-radius: 10px;
   position: absolute;
@@ -94,7 +93,7 @@ input[type="text"] {
     rgb(225, 234, 238) 90%
   );
   margin-bottom: 0;
-    margin-right: 10px;
+  margin-right: 10px;
 }
 .local-parameters {
   border-radius: 10px;
@@ -109,20 +108,18 @@ input[type="text"] {
   font-size: 8px;
   font-weight: lighter;
 }
-.current-time{
-  color:red;
+.current-time {
+  color: red;
 }
 
-
-.converter-link{
+.converter-link {
   text-decoration: none;
   color: rgb(0, 0, 0);
   opacity: 0.8;
 }
-.converter-link:hover{
-  opacity:1;
-    font-weight: bold;
-
+.converter-link:hover {
+  opacity: 1;
+  font-weight: bold;
 }
 
 .week-weather {
@@ -161,10 +158,10 @@ input[type="text"] {
 .week-stiker-icon {
 }
 
-#description{
-  text-transform: capitalize;
+#description::first-letter {
+  text-transform: uppercase;
 }
-.searct-button{
+.searct-button {
   height: 112px;
-    width: 90px;
+  width: 90px;
 }
