Add css: h1 - all letters except the first - lowercase

--- a/final_project_plus/src/style.css
+++ b/final_project_plus/src/style.css
@@ -165,6 +165,9 @@ input[type="text"] {
   height: 112px;
   width: 90px;
 }
+h1 {
+  text-transform: lowercase;
+}
 h1::first-letter {
   text-transform: uppercase;
 }
