--- a/final_project_plus/src/style.css
+++ b/final_project_plus/src/style.css
@@ -171,3 +171,8 @@ h1 {
 h1::first-letter {
   text-transform: uppercase;
 }
+.footer-container{
+  position: fixed;
+  bottom: 50px;
+  left: 30px;
+}
