--- a/final_project_plus/src/style.css
+++ b/final_project_plus/src/style.css
@@ -7,7 +7,7 @@
     rgb(250, 250, 250) 0%,
     rgb(225, 234, 238) 90%
   );
-  border: 1px solid rgba(26, 41, 1, 0.096);
+  border: 1px solid rgba(124, 134, 107, 0.096);
   opacity: 0, 7;
   font-family: "Della Respira", serif;
 
@@ -90,7 +90,7 @@ input[type="text"] {
   background: radial-gradient(
     circle at 18.7% 37.8%,
     rgb(250, 250, 250) 0%,
-    rgb(225, 234, 238) 90%
+    rgb(255, 255, 255) 90%
   );
   margin-bottom: 0;
   margin-right: 10px;
@@ -107,9 +107,6 @@ input[type="text"] {
   );
   font-size: 8px;
   font-weight: lighter;
-}
-.current-time {
-  color: red;
 }
 
 .converter-link {
@@ -150,10 +147,6 @@ input[type="text"] {
   border: 1px solid rgba(26, 41, 1, 0.514);
   opacity: 1;
 }
-#main-stiker-icon {
-  text-align: right;
-  opacity: 1;
-}
 
 .week-stiker-icon {
 }
@@ -171,10 +164,29 @@ h1 {
 h1::first-letter {
   text-transform: uppercase;
 }
-.footer-container{
+.h2-text {
+  font-size: x-large;
+}
+.footer-container {
   position: fixed;
   bottom: 50px;
   left: 30px;
 }
-.footer-container a{
-text-decoration: none;}
+.footer-container a {
+  text-decoration: none;
+}
+#degrees{
+      font-size: 56px;
+}
+.choice-units{
+      vertical-align: top;
+}
+.choice-units .active{
+cursor: default;
+  color: rgb(0, 0, 0);
+}
+
+.choice-units .active:hover{
+  text-decoration: none;
+
+}
